[package]
name = "key-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 = "0.8.2"
derivation-path = { version = "0.2.0", default-features = false }
sha2 = { version = "0.10.1", default-features = false }
hmac = { version = "0.12.0", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "rand"] }
base58 = "0.2.0"